syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EntityMotion.proto";

message SceneEntityMoveCsReq {
    // uint64 IOCFDECPNHN = 8;
    uint32 entry_id = 11; // HEFPEJEGDBO
    repeated EntityMotion entity_motion_list = 12;
}