syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EntityMotion.proto";
import "ClientDownloadData.proto";

message SceneEntityMoveScRsp {
	uint32 retcode = 9;
	repeated EntityMotion entity_motion_list = 13;
	ClientDownloadData download_data = 10;
}